--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <script src="https://www.gstatic.com/firebasejs/4.3.1/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/4.3.1/firebase-database.js"></script>
   <script src="https://www.gstatic.com/firebasejs/4.3.1/firebase-messaging.js"></script>
-  <link rel="stylesheet" href="scss/styles.min.css">
+  <link rel="stylesheet" href="css/styles.min.css">
 </head>
 
 <body>
